--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-email/components": "0.5.7",
+    "@react-email/render": "^1.4.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.0",
     "@tailwindcss/postcss": "^4.0.0",
@@ -52,6 +53,7 @@
     "patreon": "^0.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-player": "^3.3.3",
     "resend": "^6.2.0",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2"
