--- a/package.json
+++ b/package.json
@@ -20,6 +20,13 @@
   },
   "dependencies": {
     "@custom-react-hooks/use-media-query": "^1.5.1",
+    "@opentelemetry/auto-instrumentations-node": "^0.66.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.207.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.207.0",
+    "@opentelemetry/resources": "^2.2.0",
+    "@opentelemetry/sdk-metrics": "^2.2.0",
+    "@opentelemetry/sdk-node": "^0.207.0",
+    "@opentelemetry/semantic-conventions": "^1.37.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -54,8 +61,8 @@
     "patreon": "^0.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-player": "^3.3.3",
     "resend": "^6.2.0",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2"
   },
