--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-email/components": "0.5.7",
@@ -55,7 +56,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "lightningcss": "^1.30.2",
-    "lucide-react": "^0.545.0",
+    "lucide-react": "^0.548.0",
     "mana-font": "^1.18.0",
     "motion": "^12.23.24",
     "next": "15.5.5",
