--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "prepare": "husky",
     "fetch:decks": "tsx scripts/import-decks.ts",
     "fetch:images": "tsx scripts/backfill-card-images.ts",
-    "cleanup:phantom-cache": "tsx scripts/cleanup-phantom-cache.ts"
+    "cleanup:phantom-cache": "tsx scripts/cleanup-phantom-cache.ts",
+    "seed:config": "tsx scripts/seed-site-config.ts"
   },
   "dependencies": {
     "@custom-react-hooks/use-media-query": "^1.5.1",
@@ -60,7 +61,7 @@
     "lucide-react": "^0.548.0",
     "mana-font": "^1.18.0",
     "motion": "^12.23.24",
-    "next": "15.5.5",
+    "next": "^16.0.0",
     "next-themes": "^0.4.6",
     "patreon": "^0.4.1",
     "react": "19.1.0",
