--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "lightningcss": "^1.30.2",
     "lucide-react": "^0.548.0",
     "mana-font": "^1.18.0",
+    "mermaid": "^11.12.1",
     "motion": "^12.23.24",
     "next": "^16.0.0",
     "next-themes": "^0.4.6",
