--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,6 +44,9 @@
       "@/app/*": [
         "./src/app/*"
       ],
+      "@/context/*": [
+        "./src/lib/contexts/*"
+      ],
       "@/styles/*": [
         "./src/styles/*"
       ],
