--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/typography": "^0.5.19",
     "@tanstack/react-query": "^5.90.3",
+    "@tanstack/react-virtual": "^3.13.12",
     "@types/lodash": "^4.17.20",
     "@uidotdev/usehooks": "^2.4.1",
     "biome": "^0.3.3",
