--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "patreon": "^0.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "resend": "^6.2.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.3.1",
